--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
                                 <configuration>
                                     <rules>
                                         <requireMavenVersion>
-                                            <version>[2.2.1]</version>
+                                            <version>[3.0,)</version>
                                         </requireMavenVersion>
                                     </rules>
                                 </configuration>
